another ios bug workaround

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^0.3.13",
+    "@vueuse/core": "^10.11.0",
+    "nosleep.js": "patch:nosleep.js@npm%3A0.12.0#~/.yarn/patches/nosleep.js-npm-0.12.0-e6d97801e8.patch",
     "nuxt": "^3.12.2",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
@@ -21,5 +23,6 @@
     "eslint": "^9.5.0",
     "typescript": "^5.4.5",
     "vue-tsc": "^2.0.21"
-  }
+  },
+  "packageManager": "yarn@4.3.0"
 }
