--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "eslint": "^9.5.0",
+    "netlify-cli": "^17.28.0",
     "typescript": "^5.4.5",
     "vue-tsc": "^2.0.21"
   },
